2005-12-17  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Reviewed and landed by Darin.

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=5479
          Can't select text with RTL override rendered by ATSUI

        * fast/text/atsui-rtl-override-selection-expected.checksum: Added.
        * fast/text/atsui-rtl-override-selection-expected.png: Added.
        * fast/text/atsui-rtl-override-selection-expected.txt: Added.
        * fast/text/atsui-rtl-override-selection.html: Added.

2005-12-16  Geoffrey Garen  <ggaren@apple.com>

        Layout test for http://bugzilla.opendarwin.org/show_bug.cgi?id=6112
        REGRESSION: navigator.plugins empty.

        * fast/js/Plug-ins-expected.checksum: Added.
        * fast/js/Plug-ins-expected.png: Added.
        * fast/js/Plug-ins-expected.txt: Added.
        * fast/js/Plug-ins.html: Added.

2005-12-16  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Reviewed and landed by Darin.

        Test for: http://bugzilla.opendarwin.org/show_bug.cgi?id=6014
        Bidi algorithm: incorrect resolved levels for neutrals between R and
        ET ON L

        * fast/text/international/bidi-european-terminators-expected.checksum: Added.
        * fast/text/international/bidi-european-terminators-expected.png: Added.
        * fast/text/international/bidi-european-terminators-expected.txt: Added.
        * fast/text/international/bidi-european-terminators.html: Added.

2005-12-16  Darin Adler  <darin@apple.com>

        - Added layout tests Evan Gross contributed about converting to attributed string.
          The results here currently seem wrong, but are what I get with TOT.

        * fast/text/attributed-substring-from-range-expected.txt: Added.
        * fast/text/attributed-substring-from-range-lines-expected.txt: Added.
        * fast/text/attributed-substring-from-range-lines.html: Added.
        * fast/text/attributed-substring-from-range.html: Added.
